<resources>

    <!--Тексты в drawer activity-->
    <string name="app_name">Material Design App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Material Design Example</string>
    <string name="nav_header_subtitle">Aleksandr Fedchenko</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Пункты меню-->
    <string name="menu_edit_text">Edit text</string>
    <string name="menu_snack_bar">FAB and SnackBar</string>
    <string name="menu_bottom_sheet">Bottom Sheet</string>
    <string name="menu_buttons">Buttons and collapsing</string>
    <string name="menu_progress">ProgressBar</string>
    <string name="menu_fab_behavior">FAB behavior</string>
    <string name="menu_first_group">Первая группа</string>
    <string name="menu_second_group">Вторая группа</string>
    <string name="menu_recycler">RecyclerView</string>
    <string name="menu_tabs_activity">Tabs</string>
    <string name="menu_bottom_menu">Bottom menu</string>

    <!--Названия табов-->
    <string name="TabEditText">EditText</string>
    <string name="TabButtons">Buttons</string>
    <string name="TabProgress">Progress</string>

    <!--Тексты на разных view-->
    <string name="home_second">Home Second</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Passord</string>
    <string name="bottom_sheet_text">Потяни вверх</string>
    <string name="flat_button_text_view">Flat buttons example</string>
    <string name="raised_button_text_view">Raised buttons example</string>
    <string name="activity_toolbar_text_view">Окно с кнопкой \"назад\""</string>

    <!--Тексты на кнопках-->
    <string name="button_text">BUTTON</string>
    <string name="button_open_activity">OPEN COLLAPSING ACTIVITY</string>
    <string name="button_show_progress">SHOW</string>
    <string name="button_hide_progress">HIDE</string>

    <!--Тексты для collapsing_activity-->
    <string name="big_text">
        Руслан и Людмила\n
        Посвящение\n
        Для вас, души моей царицы,\n
        Красавицы, для вас одних\n
        Времен минувших небылицы,\n
        В часы досугов золотых,\n
        Под шепот старины болтливой,\n
        Рукою верной я писал;\n
    Примите ж вы мой труд игривый!\n
    Ничьих не требуя похвал,\n
    Счастлив уж я надеждой сладкой,\n
    Что дева с трепетом любви\n
    Посмотрит, может быть, украдкой\n
    На песни грешные мои.\n
    \n
    Песнь первая\n
    У лукоморья дуб зеленый,\n
    Златая цепь на дубе том:\n
    И днем и ночью кот ученый\n
    Всё ходит по цепи кругом;\n
    Идет направо — песнь заводит,\n
    Налево — сказку говорит.\n
    \n
    Там чудеса: там леший бродит,\n
    Русалка на ветвях сидит;\n
    Там на неведомых дорожках\n
    Следы невиданных зверей;\n
    Избушка там на курьих ножках\n
    Стоит без окон, без дверей;\n
    Там лес и дол видений полны;\n
    Там о заре прихлынут волны\n
    На брег песчаный и пустой,\n
    И тридцать витязей прекрасных;\n
    Чредой из вод выходят ясных,\n
    И с ними дядька их морской;\n
    Там королевич мимоходом\n
    Пленяет грозного царя;\n
    Там в облаках перед народом\n
    Через леса, через моря\n
    Колдун несет богатыря;\n
    В темнице там царевна тужит,\n
    А бурый волк ей верно служит;\n
    Там ступа с Бабою Ягой\n
    Идет, бредет сама собой;\n
    Там царь Кащей над златом чахнет;\n
    Там русской дух… там Русью пахнет!\n
    И там я был, и мед я пил;\n
    У моря видел дуб зеленый;\n
    Под ним сидел, и кот ученый\n
    Свои мне сказки говорил.\n
    Одну я помню: сказку эту\n
    Поведаю теперь я свету…\n
    \n
    Дела давно минувших дней,\n
    Преданья старины глубокой.\n
    \n
    В толпе могучих сыновей,\n
    С друзьями, в гриднице высокой\n
    Владимир-солнце пировал;\n
    Меньшую дочь он выдавал\n
    За князя храброго Руслана\n
    И мед из тяжкого стакана\n
    За их здоровье выпивал.\n
    Не скоро ели предки наши,\n
    Не скоро двигались кругом\n
    Ковши, серебряные чаши\n
    С кипящим пивом и вином.\n
    Они веселье в сердце лили,\n
    Шипела пена по краям,\n
    Их важно чашники носили\n
    И низко кланялись гостям.\n

    Слилися речи в шум невнятный:\n
    Жужжит гостей веселый круг;\n
    Но вдруг раздался глас приятный\n
    И звонких гуслей беглый звук;\n
    Все смолкли, слушают Баяна:\n
    И славит сладостный певец\n
    Людмилу-прелесть и Руслана\n
    И Лелем свитый им венец.\n

    Но, страстью пылкой утомленный,\n
    Не ест, не пьет Руслан влюбленный;\n
    На друга милого глядит,\n
    Вздыхает, сердится, горит\n
    И, щипля ус от нетерпенья,\n
    Считает каждые мгновенья.\n
    В уныньи, с пасмурным челом,\n
    За шумным, свадебным столом\n
    Сидят три витязя младые;\n
    Безмолвны, за ковшом пустым,\n
    Забыли кубки круговые,\n
    И брашна неприятны им;\n
    Не слышат вещего Баяна;\n
    Потупили смущенный взгляд:\n
    То три соперника Руслана;\n
    В душе несчастные таят\n
    Любви и ненависти яд.\n
    Один — Рогдай, воитель смелый,\n
    Мечом раздвинувший пределы\n
    Богатых киевских полей;\n
    Другой — Фарлаф, крикун надменный,\n
    В пирах никем не побежденный,\n
    Но воин скромный средь мечей;\n
    Последний, полный страстной думы,\n
    Младой хазарский хан Ратмир:\n
    Все трое бледны и угрюмы,\n
    И пир веселый им не в пир.\n
    \n
    Вот кончен он; встают рядами,\n
    Смешались шумными толпами,\n
    И все глядят на молодых:\n
    Невеста очи опустила,\n
    Как будто сердцем приуныла,\n
    И светел радостный жених.\n
    Но тень объемлет всю природу,\n
    Уж близко к полночи глухой;\n
    Бояре, задремав от меду,\n
    С поклоном убрались домой.\n
    Жених в восторге, в упоенье:\n
    Ласкает он в воображенье\n
    Стыдливой девы красоту;\n
    Но с тайным, грустным умиленьем\n
    Великий князь благословеньем\n
    Дарует юную чету.\n
    \n
    И вот невесту молодую\n
    Ведут на брачную постель;\n
    Огни погасли… и ночную\n
    Лампаду зажигает Лель.\n
    Свершились милые надежды,\n
    Любви готовятся дары;\n
    Падут ревнивые одежды\n
    На цареградские ковры…\n
    Вы слышите ль влюбленный шопот\n
    И поцелуев сладкий звук\n
    И прерывающийся ропот\n
    Последней робости?… Супруг\n
    Восторги чувствует заране;\n
    И вот они настали… Вдруг\n
    Гром грянул, свет блеснул в тумане,\n
    Лампада гаснет, дым бежит,\n
    Кругом всё смерклось, всё дрожит,\n
    И замерла душа в Руслане. . .\n
    Всё смолкло. В грозной тишине\n
    Раздался дважды голос странный,\n
    И кто-то в дымной глубине\n
    Взвился чернее мглы туманной.\n
    И снова терем пуст и тих;\n
    Встает испуганный жених,\n
    С лица катится пот остылый;\n
    Трепеща, хладною рукой\n
    Он вопрошает мрак немой…\n
    О горе: нет подруги милой!\n
    Хватает воздух он пустой;\n
    Людмилы нет во тьме густой,\n
    Похищена безвестной силой.\n
    \n
    Ах, если мученик любви\n
    Страдает страстью безнадежно;\n
    Хоть грустно жить, друзья мои,\n
    Однако жить еще возможно.\n
    Но после долгих, долгих лет\n
    Обнять влюбленную подругу,\n
    Желаний, слез, тоски предмет,\n
    И вдруг минутную супругу\n
    Навек утратить… о друзья,\n
    Конечно лучше б умер я!\n
    \n
    Однако жив Руслан несчастный.\n
    Но что сказал великий князь?\n
    Сраженный вдруг молвой ужасной,\n
    На зятя гневом распалясь,\n
    Его и двор он созывает:\n
    “Где, где Людмила?” — вопрошает\n
    С ужасным, пламенным челом.\n
    Руслан не слышит. “Дети, други!\n
    Я помню прежние заслуги:\n
    О, сжальтесь вы над стариком!\n
    Скажите, кто из вас согласен\n
    Скакать за дочерью моей?\n
    Чей подвиг будет не напрасен,\n
    Тому — терзайся, плачь, злодей!\n
    Не мог сберечь жены своей! —\n
    Тому я дам ее в супруги\n
    С полцарством прадедов моих.\n
    Кто ж вызовется, дети, други?..”\n
    “Я”, — молвил горестный жених.\n
    “Я! я!” — воскликнули с Рогдаем\n
    Фарлаф и радостный Ратмир:\n
    „Сейчас коней своих седлаем;\n
    Мы рады весь изъездить мир.\n
    Отец наш, не продлим разлуки;\n
    Не бойся: едем за княжной».\n
    И с благодарностью немой\n
    В слезах к ним простирает руки\n
    Старик, измученный тоской.\n </string>
</resources>
