<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit_text"
            android:icon="@drawable/ic_menu_edit_text"
            android:title="@string/menu_edit_text" />
        <item
            android:id="@+id/nav_fab"
            android:icon="@drawable/ic_menu_shack_bar"
            android:title="@string/menu_snack_bar" />
    </group>
    <item android:title="@string/menu_first_group">
        <menu>
            <item
                android:id="@+id/nav_bottom_sheet"
                android:icon="@drawable/ic_menu_bottom_sheet"
                android:title="@string/menu_bottom_sheet" />
            <item
                android:id="@+id/nav_buttons"
                android:icon="@drawable/ic_menu_buttons"
                android:title="@string/menu_buttons" />
        </menu>
    </item>
    <item android:title="@string/menu_second_group">
        <menu>
            <item
                android:id="@+id/nav_progress"
                android:icon="@drawable/ic_menu_progress"
                android:title="@string/menu_progress" />
            <item
                android:id="@+id/nav_fab_behavior"
                android:icon="@drawable/ic_menu_fab_behavior"
                android:title="@string/menu_fab_behavior" />
            <item
                android:id="@+id/nav_recycler"
                android:icon="@drawable/ic_menu_recycler"
                android:title="@string/menu_recycler" />
            <item
                android:id="@+id/nav_tabs"
                android:icon="@drawable/ic_menu_tabs"
                android:title="@string/menu_tabs_activity" />
            <item
                android:id="@+id/nav_bottom_menu"
                android:icon="@drawable/ic_menu_bottom"
                android:title="@string/menu_bottom_menu" />
        </menu>
    </item>
    <item android:title=""/>
</menu>
