<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_edit_text">

    <fragment
        android:id="@+id/nav_edit_text"
        android:name="com.example.materialdesignapp.ui.edittext.EditTextFragment"
        android:label="@string/menu_edit_text"
        tools:layout="@layout/fragment_edit_text">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.materialdesignapp.ui.edittext.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_edit_text" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_fab"
        android:name="com.example.materialdesignapp.ui.snackbar.SnackBarFragment"
        android:label="@string/menu_snack_bar"
        tools:layout="@layout/fragment_snack_bar" />

    <fragment
        android:id="@+id/nav_bottom_sheet"
        android:name="com.example.materialdesignapp.ui.bottomsheet.BottomSheetFragment"
        android:label="@string/menu_bottom_sheet"
        tools:layout="@layout/fragment_bottom_sheet" />

    <fragment
        android:id="@+id/nav_buttons"
        android:name="com.example.materialdesignapp.ui.buttons.ButtonsFragment"
        android:label="@string/menu_buttons"
        tools:layout="@layout/fragment_buttons" />

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.materialdesignapp.ui.progressbar.ProgressbarFragment"
        android:label="@string/menu_progress"
        tools:layout="@layout/fragment_progressbar" />

    <fragment
        android:id="@+id/nav_fab_behavior"
        android:name="com.example.materialdesignapp.ui.fab_behavior.FabBehaviorFragment"
        android:label="@string/menu_fab_behavior"
        tools:layout="@layout/fragment_fab_behavior" />
    <fragment
        android:id="@+id/nav_recycler"
        android:name="com.example.materialdesignapp.ui.recyclerview.RecyclerViewFragment"
        android:label="@string/menu_recycler"
        tools:layout="@layout/fragment_recycler_view" />
    <fragment
        android:id="@+id/nav_tabs"
        android:name="com.example.materialdesignapp.ui.tabsactivity.TabsActivityFragment"
        android:label="@string/menu_tabs_activity"
        tools:layout="@layout/fragment_tabs_activity" />
</navigation>