<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.buttons.ButtonsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/edit_text_padding"
        android:text = "@string/flat_button_text_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/flat_button"
        android:layout_margin="@dimen/buttons_padding"
        android:text="@string/button_text" />

    <Button
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttons_padding"
        android:text="@string/button_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/edit_text_padding"
        android:text = "@string/raised_button_text_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttons_padding"
        android:text="@string/button_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/buttons_padding"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/button_text" />

</LinearLayout>